[package]
name = "unbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false } # Turn off the default secure mode
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
fastrand = "1.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
lol_html = "0.3"
base64 = "0.13"
indoc = "1"
regex = { version = "1", default-features = false } # We don't much performance or Unicode for CSS adjustments
roxmltree = "0.15"
lazy_static = "1"
infer = { version = "0.11", default-features = false }
# mobi 0.7.0 has issues, waiting for a new release: https://github.com/vv9k/mobi-rs/issues/41
mobi = { git = "https://github.com/vv9k/mobi-rs" }

[profile.dev]
# Reduce debug rebuild time
# https://github.com/rust-gamedev/wg/issues/50#issuecomment-527160611
debug = false

# Optimize our dependencies (but not our own crate to avoid long rebuild times)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
